--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "test": "walrus-test",
     "release": "walrus release"
   },
+  "peerDependencies": {
+    "joycon": "^1.0.0 || ^2.0.0 || ^3.0.0",
+    "typescript": "^4.0.0"
+  },
   "dependencies": {
     "ts-node": "10.2.0"
   },
